add header content

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,20 +18,63 @@
       <div class="navigation">
         <nav>
           <ul class="links">
-            <li>
-              <a href="#">home</a>
+            <li class="hamburger">
+              <?xml version="1.0" encoding="UTF-8"?>
+              <svg
+                width="28px"
+                height="20px"
+                viewBox="0 0 560 400"
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <title>Group</title>
+                <g
+                  id="Page-1"
+                  stroke="none"
+                  stroke-width="1"
+                  fill="none"
+                  fill-rule="evenodd"
+                >
+                  <g
+                    id="Group"
+                    transform="translate(0.000500, 0.000000)"
+                    fill="#FFFFFF"
+                    fill-rule="nonzero"
+                  >
+                    <path
+                      d="M559.9995,25 C559.9995,31.6294286 556.312,37.9885714 549.7495,42.6785714 C543.1831,47.3660714 534.2805,50 524.9995,50 L34.9995,50 C22.4955,50 10.9405,45.2343571 4.6875,37.5 C-1.5625,29.7657143 -1.5625,20.2342857 4.6875,12.5 C10.9414,4.76571429 22.4965,0 34.9995,0 L524.9995,0 C534.2807,0 543.1835,2.63392857 549.7495,7.32142857 C556.312,12.0117143 559.9995,18.3707143 559.9995,25 Z"
+                      id="Path"
+                    ></path>
+                    <path
+                      d="M524.9995,175 L34.9995,175 C22.4955,175 10.9405,179.765643 4.6875,187.5 C-1.5625,195.234286 -1.5625,204.765714 4.6875,212.5 C10.9414,220.234286 22.4965,225 34.9995,225 L524.9995,225 C537.5035,225 549.0585,220.234357 555.3115,212.5 C561.5615,204.765714 561.5615,195.234286 555.3115,187.5 C549.0576,179.765714 537.5025,175 524.9995,175 Z"
+                      id="Path"
+                    ></path>
+                    <path
+                      d="M524.9995,350 L34.9995,350 C22.4955,350 10.9405,354.765643 4.6875,362.5 C-1.5625,370.234286 -1.5625,379.765714 4.6875,387.5 C10.9414,395.234286 22.4965,400 34.9995,400 L524.9995,400 C537.5035,400 549.0585,395.234357 555.3115,387.5 C561.5615,379.765714 561.5615,370.234286 555.3115,362.5 C549.0576,354.765714 537.5025,350 524.9995,350 Z"
+                      id="Path"
+                    ></path>
+                  </g>
+                </g>
+              </svg>
             </li>
             <li>
               <a href="#">home</a>
             </li>
             <li>
-              <a href="#">home</a>
+              <a href="#">shows</a>
             </li>
             <li>
-              <a href="#">home</a>
+              <a href="#">about</a>
+            </li>
+            <li>
+              <a href="#">contact</a>
             </li>
           </ul>
         </nav>
+      </div>
+      <div class="logIn">
+        <a href="#">log in</a>
       </div>
     </header>
     {% block body %}{% endblock %}
