--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,6 +6,13 @@
 body {
   font-family: "Anton", sans-serif;
   text-transform: uppercase;
+  font-size: 14px;
   letter-spacing: 1px;
-  background-color: red;
+  background-color: #222222;
+}
+ul,
+li,
+a {
+  text-decoration: none;
+  color: white;
 }
