--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,15 +14,15 @@
     <title>Bloc Camp</title>
   </head>
   <body>
-    <header>
+    <section>
       <div class="navigation">
         <nav>
           <ul class="links">
             <li class="hamburger">
               <?xml version="1.0" encoding="UTF-8"?>
               <svg
-                width="28px"
-                height="20px"
+                width="25.45px"
+                height="18.18px"
                 viewBox="0 0 560 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
@@ -75,6 +75,14 @@
       </div>
       <div class="logIn">
         <a href="#">log in</a>
+      </div>
+    </section>
+
+    <header>
+      <div class="logo">
+        <h4>the</h4>
+        <h1>bloc camp</h1>
+        <p>The Bay’s Premiere Concert Spot</p>
       </div>
     </header>
     {% block body %}{% endblock %}
