--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,8 +14,8 @@
     <title>Bloc Camp</title>
   </head>
   <body>
-    <section>
-      <div class="navigation">
+    <section class="navigation">
+      <div>
         <nav>
           <ul class="links">
             <li class="hamburger">
