add stripe block, margin, and style more of header

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -17,7 +17,6 @@ body {
   font-size: 14px;
   color: #ffffff;
   letter-spacing: 1px;
-  background-color: #221333;
 }
 ul,
 li,
@@ -29,25 +28,59 @@ a {
 /* dark blue: #221333; */
 /* reddish: #df3311 */
 /* white: #ffffff */
+
+/* -------------------- */
 /* Header */
+/* -------------------- */
 header {
   font-family: Oswald, sans-serif;
   background-color: #221333;
   text-transform: uppercase;
   text-align: center;
+  padding: 35px 0 45px 0;
 }
 header h4 {
   font-weight: 500;
-  font-size: 20px;
+  font-size: 17px;
   letter-spacing: 3.2px;
+  margin-bottom: -7px;
+}
+header .logo {
+  position: relative;
+  height: 70px;
+  /* margin-bottom: -5px; */
 }
 header h1 {
-  font-weight: 300;
+  font-weight: 400;
   font-size: 44px;
   letter-spacing: 3px;
+  color: #df3311;
+  background-color: transparent;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+.block {
+  width: 16.3rem;
+  height: 1.05rem;
+  background-color: #221333;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 20%);
+  background-image: repeating-linear-gradient(
+    60deg,
+    #ffffff58 0px,
+    #ffffff58 1px,
+    #221333 1px,
+    #221333 1px,
+    #221333 1.5px
+  );
 }
 header p {
-  font-weight: 100;
+  font-weight: 200;
   letter-spacing: 4.7px;
-  font-size: 13px;
+  font-size: 12px;
 }
