--- a/templates/layout.html
+++ b/templates/layout.html
@@ -79,9 +79,12 @@
     </section>
 
     <header>
-      <div class="logo">
+      <div>
         <h4>the</h4>
-        <h1>bloc camp</h1>
+        <div class="logo">
+          <h1>bloc camp</h1>
+          <div class="block"></div>
+        </div>
         <p>The Bay’s Premiere Concert Spot</p>
       </div>
     </header>
