--- a/static/css/index.css
+++ b/static/css/index.css
@@ -18,11 +18,13 @@ body {
   color: #ffffff;
   letter-spacing: 1px;
 }
-ul,
-li,
 a {
   text-decoration: none;
-  color: white;
+  color: #ffffff;
+}
+ul,
+li {
+  list-style: none;
 }
 /* olor Palette */
 /* dark blue: #221333; */
@@ -48,7 +50,6 @@ header h4 {
 header .logo {
   position: relative;
   height: 70px;
-  /* margin-bottom: -5px; */
 }
 header h1 {
   font-weight: 400;
@@ -83,4 +84,40 @@ header p {
   font-weight: 200;
   letter-spacing: 4.7px;
   font-size: 12px;
+}
+/* -------------------- */
+/* Navigation Bar */
+/* -------------------- */
+section.navigation {
+  background-color: red;
+  padding: 10px 0;
+}
+.container {
+  width: 90vw;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav {
+  background-color: #221333;
+  width: 60vw;
+}
+.links {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 8px 0 10px 10px;
+}
+.links li {
+  margin-right: 40px;
+  text-transform: uppercase;
+  font-family: Oswald, sans-serif;
+  font-weight: 400;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.hamburger {
+  margin-left: 0;
 }
