--- a/static/css/index.css
+++ b/static/css/index.css
@@ -39,7 +39,7 @@ header {
   background-color: #221333;
   text-transform: uppercase;
   text-align: center;
-  padding: 35px 0 45px 0;
+  padding: 0px 0 45px 0;
 }
 header h4 {
   font-weight: 500;
@@ -85,45 +85,69 @@ header p {
   letter-spacing: 4.7px;
   font-size: 12px;
 }
+@media screen and (min-width: 850px) {
+  header {
+    padding: 35px 0 45px 0;
+  }
+}
+@media screen and (max-width: 450px) {
+  header {
+    padding-bottom: 30px;
+  }
+  header h4 {
+    font-size: 12px;
+    margin-bottom: -11px;
+  }
+  header .logo {
+    margin-bottom: -6px;
+  }
+  header h1 {
+    font-size: 34px;
+  }
+  .block {
+    height: 0.8rem;
+    transform: translate(-50%, 25%);
+  }
+  header p {
+    font-size: 10px;
+  }
+}
 /* -------------------- */
 /* Navigation Bar */
 /* -------------------- */
 section.navigation {
-  background-color: red;
-  padding: 10px 0;
+  background-color: #221333;
+  padding: 37px 0;
+  position: relative;
+  width: 100%;
+  height: 60px;
+  overflow: hidden;
 }
 .container {
   width: 90vw;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-}
-nav {
-  background-color: #221333;
-  width: 60vw;
+  align-items: flex-start;
 }
 .links {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 8px 0 10px 10px;
+  padding: 0;
+}
+nav {
+  width: 100%;
 }
 .links li {
-  margin-right: 40px;
   text-transform: uppercase;
   font-family: Oswald, sans-serif;
   font-weight: 400;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
 }
-.hamburger {
-  margin-left: 0;
+.links li svg {
+  margin-bottom: 40px;
 }
 .logIn {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 .logIn a {
   text-transform: capitalize;
@@ -131,4 +155,55 @@ nav {
   font-weight: 400;
   font-size: 16px;
   margin-left: 8px;
+}
+.link {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.open-nav {
+  height: auto;
+}
+@media screen and (min-width: 850px) {
+  section.navigation {
+    background-color: transparent;
+    padding: 10px 0;
+    position: absolute;
+    top: 19px;
+    left: 0;
+    width: 100%;
+  }
+  .container {
+    align-items: center;
+  }
+  nav {
+    background-color: #221333;
+    width: 40vw;
+  }
+  .links {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 8px 0 10px 0;
+  }
+  .links li {
+    margin-right: 40px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .links li:first-child {
+    margin-right: 0;
+  }
+  .links li svg {
+    display: none;
+  }
+  .link {
+    margin-bottom: 0;
+  }
+}
+@media screen and (max-width: 450px) {
+  .logIn a {
+    font-size: 12px;
+  }
 }
