--- a/static/css/index.css
+++ b/static/css/index.css
@@ -17,6 +17,8 @@ body {
   font-size: 14px;
   color: #ffffff;
   letter-spacing: 1px;
+
+  height: 200vh;
 }
 a {
   text-decoration: none;
@@ -36,10 +38,15 @@ li {
 /* -------------------- */
 header {
   font-family: Oswald, sans-serif;
+  position: absolute;
+  top: 60px;
+  left: 0;
+  width: 100%;
   background-color: #221333;
   text-transform: uppercase;
   text-align: center;
   padding: 0px 0 45px 0;
+  margin-top: 14px;
 }
 header h4 {
   font-weight: 500;
@@ -87,11 +94,16 @@ header p {
 }
 @media screen and (min-width: 850px) {
   header {
+    position: relative;
+    top: 0;
+    left: 0;
     padding: 35px 0 45px 0;
+    margin-top: 0;
   }
 }
 @media screen and (max-width: 450px) {
   header {
+    position: relative;
     padding-bottom: 30px;
   }
   header h4 {
@@ -122,6 +134,8 @@ section.navigation {
   width: 100%;
   height: 60px;
   overflow: hidden;
+  z-index: 2;
+  transition: all 0.2s ease;
 }
 .container {
   width: 90vw;
@@ -140,9 +154,11 @@ nav {
   text-transform: uppercase;
   font-family: Oswald, sans-serif;
   font-weight: 400;
+  cursor: pointer;
 }
 .links li svg {
   margin-bottom: 40px;
+  fill: #df3311;
 }
 .logIn {
   display: flex;
@@ -155,20 +171,20 @@ nav {
   font-weight: 400;
   font-size: 16px;
   margin-left: 8px;
+  color: #df3311;
 }
 .link {
   display: block;
   margin-bottom: 20px;
 }
-
-.open-nav {
+section.navigation.open-nav {
   height: auto;
 }
 @media screen and (min-width: 850px) {
   section.navigation {
     background-color: transparent;
     padding: 10px 0;
-    position: absolute;
+    position: fixed;
     top: 19px;
     left: 0;
     width: 100%;
