--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,6 +28,7 @@
                   version="1.1"
                   xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink"
+                  class="hamburger-open"
                 >
                   <title>Group</title>
                   <g
@@ -56,6 +57,33 @@
                         id="Path"
                       ></path>
                     </g>
+                  </g>
+                </svg>
+
+                <?xml version="1.0" encoding="UTF-8"?>
+                <svg
+                  width="20px"
+                  height="20px"
+                  viewBox="0 0 20 20"
+                  version="1.1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  class="hamburger-close"
+                >
+                  <title>Path Copy</title>
+                  <g
+                    id="Page-1"
+                    stroke="none"
+                    stroke-width="1"
+                    fill="none"
+                    fill-rule="evenodd"
+                  >
+                    <path
+                      d="M19.6230914,18.0930863 L11.5521779,10 L19.6230914,1.90691367 C20.0665086,1.46349648 20.0665086,0.776138461 19.6230914,0.332562893 C19.1796742,-0.110854298 18.4923162,-0.110854298 18.0487407,0.332562893 L9.97782716,8.42564922 L1.90691367,0.354735732 C1.46349648,-0.0886814585 0.776138461,-0.0886814585 0.332562893,0.354735732 C-0.110854298,0.798152923 -0.110854298,1.48551094 0.332562893,1.92908651 L8.40347638,10 L0.332562893,18.0930863 C-0.110854298,18.5365035 -0.110854298,19.2238615 0.332562893,19.6674371 C0.775980084,20.1108543 1.4633381,20.1108543 1.90691367,19.6674371 L9.97782716,11.5743508 L18.0709135,19.6674371 C18.5143307,20.1108543 19.2016887,20.1108543 19.6452643,19.6674371 C20.0665878,19.2240199 20.0665878,18.5144099 19.6231473,18.0930863 L19.6230914,18.0930863 Z"
+                      id="Path-Copy"
+                      fill="#FFFFFF"
+                      fill-rule="nonzero"
+                    ></path>
                   </g>
                 </svg>
               </li>
