--- a/static/css/index.css
+++ b/static/css/index.css
@@ -28,7 +28,7 @@ ul,
 li {
   list-style: none;
 }
-/* olor Palette */
+/* Color Palette */
 /* dark blue: #221333; */
 /* reddish: #df3311 */
 /* white: #ffffff */
@@ -155,7 +155,7 @@ section.navigation {
 .links {
   padding: 0;
 }
-nav {
+.navigation nav {
   width: 100%;
 }
 .links li {
@@ -254,4 +254,16 @@ section.navigation.open-nav .hamburger-close {
   .logIn a {
     font-size: 12px;
   }
+}
+/* -------------------- */
+/* Social Media Links */
+/* -------------------- */
+.social-links {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social-links li {
+  margin: 0 20px;
 }
