style slide-info

--- a/static/css/slide.css
+++ b/static/css/slide.css
@@ -3,7 +3,99 @@
   height: 600px;
   color: #221333;
 }
+.swiper-slide {
+  position: relative;
+}
 .swiper-slide img {
   width: 100%;
   object-fit: cover;
+  filter: grayscale(100%);
+}
+.slides-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 7rem 9rem;
+}
+.slides-info h1 {
+  width: 50%;
+  font-size: calc(7vw + 1rem);
+  text-transform: uppercase;
+  color: #df3311;
+  line-height: 5.5rem;
+}
+.slide-info {
+  width: 36%;
+  height: 34vw;
+  max-height: 370px;
+  background-color: #df3311;
+  position: relative;
+  border-radius: 1px;
+}
+.slide-info span {
+  display: block;
+  font-size: calc(2vw + 0.5rem);
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #ffffff;
+  background-color: #221333;
+  padding: 0.3rem 2rem 0.5rem 1rem;
+  margin-bottom: 20px;
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  border-radius: 1px;
+}
+.slide-date {
+  width: calc(2rem + 26vw);
+}
+.slide-time {
+  width: calc(2rem + 13vw);
+  transform: translateY(4.5rem);
+}
+.slide-info button,
+.slide-info div .btn-block {
+  position: absolute;
+  bottom: 1.5rem;
+  left: 2rem;
+}
+.slide-info button {
+  text-transform: uppercase;
+  padding: 1rem 1.5rem;
+  color: #221333;
+  border: 3px solid #221333;
+  background-color: transparent;
+  border-radius: 1px;
+  z-index: 2;
+  cursor: pointer;
+  letter-spacing: 1px;
+  font-weight: 700;
+
+  transition: all 0.3s ease;
+}
+.slide-info div {
+  height: 100%;
+  position: relative;
+}
+.slide-info div .btn-block {
+  width: 235px;
+  height: 27px;
+  background-color: #ffffff;
+  transform: translate(-42%, -51%);
+  border-radius: 1px;
+}
+.slide-info button:hover {
+  background-color: #221333;
+  color: #df3311;
+}
+@media screen and (min-width: 1300px) {
+  .slides-info h1 {
+    line-height: 7rem;
+  }
 }
