--- a/templates/layout.html
+++ b/templates/layout.html
@@ -266,10 +266,14 @@
           <div class="swiper-slide">
             <div>
               <div class="slides-info">
-                <h1>hey</h1>
+                <h1>the ecstasy.</h1>
                 <div class="slide-info">
-                  <span>date</span>
-                  <span>time</span>
+                  <span class="slide-date">wednesday dec. 28</span>
+                  <span class="slide-time">8.00 pm</span>
+                  <div>
+                    <button>Get Tickets</button>
+                    <div class="btn-block"></div>
+                  </div>
                 </div>
               </div>
               <img src="../static/images/img-1.jpg" alt="" />
@@ -278,25 +282,49 @@
           <div class="swiper-slide">
             <div>
               <div class="slides-info">
-                <h1>hey</h1>
+                <h1>turning jane.</h1>
                 <div class="slide-info">
-                  <span>date</span>
-                  <span>time</span>
+                  <span class="slide-date">thursday dec. 29</span>
+                  <span class="slide-time">7.00 pm</span>
+                  <div>
+                    <button>Get Tickets</button>
+                    <div class="btn-block"></div>
+                  </div>
                 </div>
               </div>
-              <img src="../static/images/img-2.jpg" alt="" />
+              <img src="../static/images/img-4.jpg" alt="" />
             </div>
           </div>
           <div class="swiper-slide">
             <div>
               <div class="slides-info">
-                <h1>hey</h1>
+                <h1>double helix.</h1>
                 <div class="slide-info">
-                  <span>date</span>
-                  <span>time</span>
+                  <span class="slide-date">friday dec. 30</span>
+                  <span class="slide-time">8.00 pm</span>
+                  <div>
+                    <button>Get Tickets</button>
+                    <div class="btn-block"></div>
+                  </div>
                 </div>
               </div>
               <img src="../static/images/img-3.jpg" alt="" />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div>
+              <div class="slides-info">
+                <h1>double helix.</h1>
+                <div class="slide-info">
+                  <span class="slide-date">saturday dec. 31</span>
+                  <span class="slide-time">6.30 pm</span>
+                  <div>
+                    <button>Get Tickets</button>
+                    <div class="btn-block"></div>
+                  </div>
+                </div>
+              </div>
+              <img src="../static/images/img-5.jpg" alt="" />
             </div>
           </div>
         </div>
