--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,6 +14,7 @@
 }
 body {
   /* font-family: "Anton", sans-serif; */
+  font-family: Oswald, sans-serif;
   font-size: 14px;
   color: #ffffff;
   /* letter-spacing: 1px; */
@@ -35,7 +36,7 @@ li {
 /* Header */
 /* -------------------- */
 header {
-  font-family: Oswald, sans-serif;
+  /* font-family: Oswald, sans-serif; */
   position: absolute;
   top: 60px;
   left: 0;
@@ -158,7 +159,7 @@ section.navigation {
 }
 .links li {
   text-transform: uppercase;
-  font-family: Oswald, sans-serif;
+  /* font-family: Oswald, sans-serif; */
   font-size: 20px;
   font-weight: 400;
   cursor: pointer;
@@ -174,7 +175,7 @@ section.navigation {
 }
 .logIn a {
   text-transform: capitalize;
-  font-family: Oswald, sans-serif;
+  /* font-family: Oswald, sans-serif; */
   font-weight: 400;
   font-size: 16px;
   letter-spacing: 1px;
