--- a/templates/layout.html
+++ b/templates/layout.html
@@ -331,6 +331,23 @@
       </div>
     </section>
 
+    <section class="upcoming">
+      <div>
+        <div class="line1"></div>
+        <div class="upcoming-title">
+          <h1>upcoming</h1>
+          <h1>shows</h1>
+          <div class="block"></div>
+          <div class="line2"></div>
+        </div>
+        <div class="line3"></div>
+        <div class="upcoming-info">
+          <p>All shows are 18+ to enter and 21+ to purchase alcohol.</p>
+          <p>No smoking inside. Please bring a valid form of ID.</p>
+        </div>
+      </div>
+    </section>
+
     {% block body %}{% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
