--- a/static/css/index.css
+++ b/static/css/index.css
@@ -371,6 +371,9 @@ section.navigation.open-nav .hamburger-close {
   .upcoming {
     margin-top: 55px;
   }
+  .upcoming-container {
+    width: 80vw;
+  }
   .upcoming-title h1 {
     font-size: calc(2vw + 0.5rem);
     padding-left: 10px;
