--- a/static/css/shows.css
+++ b/static/css/shows.css
@@ -1,3 +1,6 @@
+/* ----------------- */
+/* Shows Section */
+/* ----------------- */
 .shows {
   background-color: #321f48;
   padding: 80px 0;
@@ -58,4 +61,53 @@
 }
 .day {
   color: #726185;
+}
+/* ----------------- */
+/* Shows Section Media Queries */
+/* ----------------- */
+@media screen and (max-width: 850px) {
+  .shows-container {
+    width: 85vw;
+  }
+  .show {
+    padding: 50px 0;
+  }
+  .show-info h2 {
+    font-size: 30px;
+  }
+  .show-info p {
+    font-size: 12px;
+  }
+  .show-info h3 {
+    font-size: 26px;
+    padding-left: 15px;
+  }
+  .btn {
+    padding: 10px 18px;
+  }
+  .show:hover .show-info {
+    transform: translateX(-90px);
+  }
+}
+@media screen and (max-width: 450px) {
+  .show {
+    flex-direction: column;
+  }
+  .show-info {
+    width: 100%;
+    justify-content: flex-start;
+    /* display: block; */
+    margin-bottom: 20px;
+  }
+  .show-info h3 {
+    display: block;
+    width: 100%;
+  }
+  .btn {
+    display: block;
+    width: 100%;
+  }
+  .show:hover .show-info {
+    transform: translateX(-90px);
+  }
 }
