--- a/templates/layout.html
+++ b/templates/layout.html
@@ -388,6 +388,12 @@
           </div>
           <button class="btn">get tickets</button>
         </div>
+
+        <div class="fancy-btn">
+          <button>Get Tickets</button>
+          <div class="btn-block"></div>
+          <div class="btn-bg"></div>
+        </div>
       </div>
     </section>
     {% block body %}{% endblock %}
