add subscribe section

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -398,6 +398,20 @@
     </section>
     {% block body %}{% endblock %}
 
+    <section class="subscribe">
+      <div class="subscribe-info">
+        <h1>stay up to date</h1>
+        <p>
+          Sign up to get our newsletter for all the latest news, shows, and
+          events
+        </p>
+      </div>
+      <form action="" class="subscribe-form">
+        <input type="email" placeholder="Enter your email here" name="email" />
+        <button class="btn subscribe-btn" type="submit">Subscribe</button>
+      </form>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="../static/js/index.js"></script>
     <script src="../static/js/slide.js"></script>
