--- a/static/css/index.css
+++ b/static/css/index.css
@@ -315,15 +315,12 @@ section.navigation.open-nav .hamburger-close {
   line-height: 1.7;
 }
 .upcoming-title2-box .upcoming-title2 {
-  /* width: 20rem; */
-  /* width: 29.2vw; */
   width: 100%;
   background-color: #df3311;
   margin-bottom: 0;
   line-height: 57px;
 }
 .upcoming-title2-box {
-  /* width: 29.2vw; */
   width: 272px;
   position: relative;
 }
@@ -334,8 +331,6 @@ section.navigation.open-nav .hamburger-close {
   position: absolute;
   top: 20px;
   left: 250px;
-  /* left: 299px; */
-  /* left: 26vw; */
   transform: rotate(90deg);
 }
 .line2 {
@@ -344,9 +339,7 @@ section.navigation.open-nav .hamburger-close {
   width: 110px;
   position: absolute;
   bottom: -8px;
-  /* right: -16px; */
   right: -15px;
-  /* right: -0.8vw; */
 }
 .line3 {
   height: 30px;
@@ -398,4 +391,41 @@ section.navigation.open-nav .hamburger-close {
   .upcoming-title2-box .block {
     left: 137px;
   }
+}
+/* -------------------- */
+/* Subscribe Section */
+/* -------------------- */
+.subscribe {
+  background-color: #221333;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 80px 0;
+}
+.subscribe-info {
+  width: 30%;
+}
+.subscribe-info h1 {
+  text-transform: uppercase;
+  font-size: calc(3vw + 1rem);
+  letter-spacing: 1px;
+  background-color: transparent;
+  padding-left: 50px;
+  line-height: 1;
+  width: 120%;
+}
+.subscribe-info p {
+  font-size: 16px;
+  letter-spacing: 1px;
+  font-weight: 200;
+  background-color: #df3311;
+  padding: 80px 0 80px 50px;
+}
+.subscribe-form {
+  width: 50%;
+  background-color: #df3311;
+  padding: 80px 0 80px 20px;
+}
+.subscribe-btn {
+  color: #221333;
 }
