--- a/templates/layout.html
+++ b/templates/layout.html
@@ -400,15 +400,27 @@
 
     <section class="subscribe">
       <div class="subscribe-info">
-        <h1>stay up to date</h1>
+        <div class="subscribe-title">
+          <h1>stay up to date</h1>
+          <div class="block"></div>
+        </div>
         <p>
           Sign up to get our newsletter for all the latest news, shows, and
           events
         </p>
       </div>
-      <form action="" class="subscribe-form">
-        <input type="email" placeholder="Enter your email here" name="email" />
-        <button class="btn subscribe-btn" type="submit">Subscribe</button>
+      <form method="post" class="subscribe-form">
+        <input
+          autocomplete="off"
+          type="email"
+          placeholder="Enter your email here *"
+          name="email"
+          class="email"
+        />
+        <div class="subscribe-btn-block">
+          <button class="btn subscribe-btn" type="submit">Subscribe</button>
+          <div class="subscribe-btn-bg"></div>
+        </div>
       </form>
     </section>
 
