--- a/templates/layout.html
+++ b/templates/layout.html
@@ -424,6 +424,10 @@
       </form>
     </section>
 
+    <footer>
+      <p>&#169 by The Bloc Camp. Created by SutheeDeveloper</p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="../static/js/index.js"></script>
     <script src="../static/js/slide.js"></script>
